--- a/configs/multi_task_rotnet_mask_rcnn_config.json
+++ b/configs/multi_task_rotnet_mask_rcnn_config.json
@@ -1,22 +1,30 @@
 {
     "model":{
-        "model_name": "Mask_RCNN_Resnet_50_FPN",
-        "pre_trained": true,
+        "model_name": "Multi_task_RotNet_Mask_RCNN_Resnet50",
+        "backbone_type": "pre-trained",
+        "num_rotations": 4,
+        "drop_out": 0.2,
+        "batch_norm": false,
         "trainable_layers": 5,
         "num_classes": 2
     },   
     "dataset":{
+        "dir": "datasets/sources/jersey_royals_ssl_ds",
+        "train_test_split": 0.8,
+        "train_val_split": 0.8,
         "train":{
             "dir": "datasets/sources/jersey_dataset_v4/train",
             "json_dir": "datasets/sources/jersey_dataset_v4/train/train.json",
             "batch_size": 1,
+            "batch_size_ssl": 1,
             "shuffle": true,
             "num_workers": 4
         },
         "val":{
             "dir": "datasets/sources/jersey_dataset_v4/val",
-            "json_dir": "datasets/sources/jersey_dataset_v4/val/val.json",
+            "json_dir": "datasets/sources/jersey_dataset_v4/val/val.json", 
             "batch_size": 1,
+            "batch_size_ssl": 1,
             "shuffle": false,
             "num_workers": 4
         },
@@ -24,6 +32,7 @@
             "dir": "datasets/sources/jersey_dataset_v4/test",
             "json_dir": "datasets/sources/jersey_dataset_v4/test/test.json",
             "batch_size": 1,
+            "batch_size_ssl": 1,
             "shuffle": false,
             "num_workers": 4
         }
@@ -40,14 +49,14 @@
         "test": false,
         "start_epoch": 0, 
         "end_epoch": 80,
-        "loop_type": "instance",
+        "loop_type": "multi_task",
         "device": "cuda:0",
         "scheduler": true,
         "amp": true
     },
     "logging":{
-        "logger": "base_logger",
-        "path": "outputs/multi_task_dev/test_3",
-        "pth_name": "mem_test_best.pth"
+        "logger": "multi_task_logger",
+        "path": "outputs/multi_task_dev/test_4",
+        "pth_name": "multi_task_best.pth"
     }
 }
