in progress multi_task_training

--- a/configs/multi_task_rotnet_mask_rcnn_config.json
+++ b/configs/multi_task_rotnet_mask_rcnn_config.json
@@ -45,8 +45,8 @@
         "sched_gamma": 0.1
     },
     "loop":{
-        "train": true,
-        "test": false,
+        "train": false,
+        "test": true,
         "start_epoch": 0, 
         "end_epoch": 80,
         "loop_type": "multi_task",
