--- a/configs/multi_task_rotnet_mask_rcnn_config.json
+++ b/configs/multi_task_rotnet_mask_rcnn_config.json
@@ -1,6 +1,6 @@
 {
     "model":{
-        "model_name": "Multi_task_RotNet_Mask_RCNN_Resnet50",
+        "model_name": "RotMaskRCNN_MultiTask",
         "backbone_type": "pre-trained",
         "num_rotations": 4,
         "drop_out": 0.2,
@@ -9,32 +9,57 @@
         "num_classes": 2
     },   
     "dataset":{
-        "dir": "datasets/sources/jersey_royals_ssl_ds",
-        "train_test_split": 0.8,
-        "train_val_split": 0.8,
-        "train":{
-            "dir": "datasets/sources/jersey_dataset_v4/train",
-            "json_dir": "datasets/sources/jersey_dataset_v4/train/train.json",
-            "batch_size": 1,
-            "batch_size_ssl": 4,
-            "shuffle": true,
-            "num_workers": 0
+        "rotnet":{
+            "dir": "datasets/sources/All_RGB",
+            "train_test_split": 0.8,
+            "train_val_split": 0.8,
+            "train":{
+                "batch_size": 4,
+                "shuffle": true,
+                "num_workers": 0,
+                "augment": true
+            },
+            "val":{
+                "batch_size": 1,
+                "shuffle": false,
+                "num_workers": 0,
+                "augment": false
+            },
+            "test":{
+                "batch_size": 1,
+                "shuffle": false,
+                "num_workers": 0,
+                "augment": false
+            }
         },
-        "val":{
-            "dir": "datasets/sources/jersey_dataset_v4/val",
-            "json_dir": "datasets/sources/jersey_dataset_v4/val/val.json", 
-            "batch_size": 1,
-            "batch_size_ssl": 1,
-            "shuffle": false,
-            "num_workers": 0
-        },
-        "test":{
-            "dir": "datasets/sources/jersey_dataset_v4/test",
-            "json_dir": "datasets/sources/jersey_dataset_v4/test/test.json",
-            "batch_size": 1,
-            "batch_size_ssl": 1,
-            "shuffle": false,
-            "num_workers": 0
+        "mask_rcnn":{
+            "train":{
+                "type": "train",
+                "dir": "datasets/sources/jersey_dataset_v4/train",
+                "json_dir": "datasets/sources/jersey_dataset_v4/train/train.json",
+                "batch_size": 1,
+                "shuffle": true,
+                "num_workers": 0,
+                "augment": false
+            },
+            "val":{
+                "type": "val",
+                "dir": "datasets/sources/jersey_dataset_v4/val",
+                "json_dir": "datasets/sources/jersey_dataset_v4/val/val.json",
+                "batch_size": 1,
+                "shuffle": false,
+                "num_workers": 0,
+                "augment": false
+            },
+            "test":{
+                "type": "test",
+                "dir": "datasets/sources/jersey_dataset_v4/test",
+                "json_dir": "datasets/sources/jersey_dataset_v4/test/test.json",
+                "batch_size": 1,
+                "shuffle": false,
+                "num_workers": 0,
+                "augment": false
+            }
         }
     },
     "optimizer":{
