--- a/configs/multi_task_rotnet_mask_rcnn_config.json
+++ b/configs/multi_task_rotnet_mask_rcnn_config.json
@@ -1,83 +1,100 @@
 {
+    "metadata": {
+        "version": "1.0",
+        "description": "Base configuration for RotNet_ResNet_50 training on All_RGB dataset."
+    },
     "model":{
         "model_name": "RotMaskRCNN_MultiTask",
-        "backbone_type": "pre-trained",
-        "num_rotations": 4,
-        "drop_out": 0.2,
-        "batch_norm": false,
-        "trainable_layers": 5,
-        "num_classes": 2
+        "params":{
+            "backbone_type": "pre-trained",
+            "num_rotations": 4,
+            "drop_out": 0.2,
+            "batch_norm": false,
+            "trainable_layers": 5,
+            "num_classes": 2
+            }
     },   
     "dataset":{
+        "source": "datasets/sources/jersey_dataset_v4",
         "rotnet":{
-            "dir": "datasets/sources/All_RGB",
-            "train_test_split": 0.8,
-            "train_val_split": 0.8,
-            "train":{
-                "batch_size": 4,
-                "shuffle": true,
-                "num_workers": 0,
-                "augment": true
-            },
-            "val":{
-                "batch_size": 1,
-                "shuffle": false,
-                "num_workers": 0,
-                "augment": false
-            },
-            "test":{
-                "batch_size": 1,
-                "shuffle": false,
-                "num_workers": 0,
-                "augment": false
+            "split":{
+                "train_test": 0.8,
+                "train_val": 0.8
+                },
+            "num_rotations": 4,
+            "params":{
+                "train":{
+                    "batch_size": 4,
+                    "shuffle": true,
+                    "num_workers": 0,
+                    "augment": true
+                },
+                "val":{
+                    "batch_size": 1,
+                    "shuffle": false,
+                    "num_workers": 0,
+                    "augment": false
+                },
+                "test":{
+                    "batch_size": 1,
+                    "shuffle": false,
+                    "num_workers": 0,
+                    "augment": false
+                }
             }
         },
         "mask_rcnn":{
-            "train":{
-                "type": "train",
-                "dir": "datasets/sources/jersey_dataset_v4/train",
-                "json_dir": "datasets/sources/jersey_dataset_v4/train/train.json",
-                "batch_size": 1,
-                "shuffle": true,
-                "num_workers": 0,
-                "augment": false
-            },
-            "val":{
-                "type": "val",
-                "dir": "datasets/sources/jersey_dataset_v4/val",
-                "json_dir": "datasets/sources/jersey_dataset_v4/val/val.json",
-                "batch_size": 1,
-                "shuffle": false,
-                "num_workers": 0,
-                "augment": false
-            },
-            "test":{
-                "type": "test",
-                "dir": "datasets/sources/jersey_dataset_v4/test",
-                "json_dir": "datasets/sources/jersey_dataset_v4/test/test.json",
-                "batch_size": 1,
-                "shuffle": false,
-                "num_workers": 0,
-                "augment": false
+            "params":{
+                "train":{
+                    "dir": "train",
+                    "json": "train.json",
+                    "batch_size": 1,
+                    "shuffle": true,
+                    "num_workers": 0,
+                    "augment": true
+                },
+                "val":{
+                    "dir": "val",
+                    "json": "val.json",
+                    "batch_size": 1,
+                    "shuffle": false,
+                    "num_workers": 0,
+                    "augment": false
+                },
+                "test":{
+                    "dir": "test",
+                    "json_dir": "test.json",
+                    "batch_size": 1,
+                    "shuffle": false,
+                    "num_workers": 0,
+                    "augment": false
+                }
             }
         }
     },
-    "optimizer":{
-        "opt_name": "Adam",
-        "opt_lr": 0.00005, 
-        "sched_name": "StepLR",
-        "sched_step": 50,
-        "sched_gamma": 0.1
+    "optimizer": {
+        "name": "Adam",
+        "params": {
+            "lr": 0.00005
+        },
+        "scheduler": {
+            "name": "StepLR",
+            "params": {
+                "step": 200,
+                "gamma": 0.1
+            }
+        }
     },
-    "loop":{
-        "train": true,
-        "test": false,
-        "start_epoch": 0, 
-        "end_epoch": 80,
-        "loop_type": "multi_task",
+    "loop": {
+        "actions": ["train"],
+        "epochs": {
+            "start": 0,
+            "end": 45
+        },
+        "type": "classification",
         "device": "cuda:0",
         "scheduler": true,
-        "amp": true
+        "amp": false
     },
     "logging":{
         "logger": "multi_task_logger",
