it passes through the model finally

--- a/configs/multi_task_rotnet_mask_rcnn_config.json
+++ b/configs/multi_task_rotnet_mask_rcnn_config.json
@@ -72,7 +72,7 @@
             "start": 0,
             "end": 45
         },
-        "type": "classification",
+        "type": "multi_task",
         "device": "cuda:0",
         "scheduler": true,
         "amp": false
