--- a/configs/multi_task_rotnet_mask_rcnn_config.json
+++ b/configs/multi_task_rotnet_mask_rcnn_config.json
@@ -61,7 +61,7 @@
         "scheduler": {
             "name": "StepLR",
             "params": {
-                "step": 200,
+                "step": 50,
                 "gamma": 0.1
             }
         }
@@ -70,7 +70,7 @@
         "actions": ["test"],
         "epochs": {
             "start": 0,
-            "end": 45
+            "end": 80
         },
         "type": "multi_task",
         "device": "cuda:0",
@@ -79,7 +79,7 @@
     },
     "logging":{
         "logger": "multi_task_logger",
-        "path": "outputs/multi_task_dev/DELET_THIS",
-        "pth_name": "multi_task_best.pth"
+        "path": "outputs/multi_task_dev/bs_2",
+        "pth_name": "last_model.pth"
     }
 }
