refactoring, classifier and main framework implemented

--- a/configs/classification/rotnet_cfg.yaml
+++ b/configs/classification/rotnet_cfg.yaml
@@ -8,8 +8,20 @@ loops:
   start: 0
   end: 20
 
-logging:
-  something: "Dave"
+
+logs:
+  model_name: rotnet_resnet_50
+  logger_type: basic
+  print_freq: 20
+  iter_init: 0
+  best_init: .inf
+  step: 200
+  exp_dir: "dev" 
+  sub_dir: "dev_1"
+  last_title: last_model.pth
+  best_post_title: post_best.pth
+  best_pre_title: pre_best.path
+
 
 model:
   model_name: rotnet_resnet_50
@@ -21,7 +33,7 @@ model:
     trainable_layers: 5
 
 dataset:
-  source: data_handling/sources/All_RGB
+  source: data_handling/sources/refine_ssl
   random_seed: 42
   params:
     col_fn: null
@@ -57,6 +69,6 @@ optimiser:
     lr: 0.00005 
   sched_name: "StepLR"
   sched_params:
-    step: 200,
+    step: 5
     gamma: 0.1
 
