--- a/configs/multi_task/rotmask_cfg.yaml
+++ b/configs/multi_task/rotmask_cfg.yaml
@@ -4,7 +4,7 @@ meta data:
 
 loops:
   device: "cuda:0"
-  grad_acc: [1, 1]
+  grad_acc: [1, 32]
   start: 0
   end: 20
 
@@ -46,21 +46,21 @@ dataset:
     train:
       dir: train
       json: train.json
-      batch_size: [1, 4]
+      batch_size: [1, 1]
       shuffle: true
       num_workers: 0
       augmentations: true
     val:
       dir: val
       json: val.json
-      batch_size: [1, 4]
+      batch_size: [1, 1]
       shuffle: false
       num_workers: 0
       augmentations: false
     test:
       dir: test
       json: test.json
-      batch_size: [1, 4]
+      batch_size: [1, 1]
       shuffle: false
       num_workers: 0
       augmentations: false
@@ -74,7 +74,7 @@ optimiser:
   opt_name: "Adam"
   opt_params:
     lr: 0.00005 
-  sched_name: "StepLR"
+  sched_name: null #"StepLR"
   sched_params:
     step: 5
     gamma: 0.1
