--- a/configs/multi_task/rotmask_cfg.yaml
+++ b/configs/multi_task/rotmask_cfg.yaml
@@ -4,26 +4,26 @@ meta_data:
 
 defaults: 
   model_name: &model_name rotmask_multi_task
-  step: &step 50
+  step: &step 100
   num_rotations: &num_rotations 4
   seed: &seed 42
 
 loops:
   device: "cuda:0"
-  grad_acc: [1, 16]
+  grad_acc: [1, 8]
   start: 0
-  end: 80
+  end: 130
   seed: *seed
 
 logs:
   model_name: *model_name
   logger_type: basic
-  print_freq: 5
+  print_freq: 10
   iter_init: 0
   best_init: .inf
   step: *step
-  exp_dir: "assisting_DELETE" 
-  sub_dir: "dev_1"
+  exp_dir: "130_epoch_test" 
+  sub_dir: "model_0"
   last_title: last_model.pth
   best_post_title: post_best.pth
   best_pre_title: pre_best.path
