--- a/configs/multi_task/rotmask_cfg.yaml
+++ b/configs/multi_task/rotmask_cfg.yaml
@@ -38,6 +38,8 @@ model:
     trainable_layers: 5
     num_classes: 2
     hidden_layers: 256
+    min_size: 480
+    max_size: 640
 
 dataset:
   source: [data_handling/sources/jersey_dataset_v4, data_handling/sources/All_RGB]
