--- a/configs/multi_task/rotmask_cfg.yaml
+++ b/configs/multi_task/rotmask_cfg.yaml
@@ -22,7 +22,7 @@ logs:
   iter_init: 0
   best_init: .inf
   step: *step
-  exp_dir: "130_epoch_test" 
+  exp_dir: "800x480_epoch_test" 
   sub_dir: "model_0"
   last_title: last_model.pth
   best_post_title: post_best.pth
@@ -39,7 +39,7 @@ model:
     num_classes: 2
     hidden_layers: 256
     min_size: 480
-    max_size: 640
+    max_size: 800
 
 dataset:
   source: [data_handling/sources/jersey_dataset_v4, data_handling/sources/All_RGB]
