--- a/configs/multi_task/rotmask_cfg.yaml
+++ b/configs/multi_task/rotmask_cfg.yaml
@@ -26,7 +26,7 @@ logs:
   sub_dir: "model_0"
   last_title: last_model.pth
   best_post_title: post_best.pth
-  best_pre_title: pre_best.path
+  best_pre_title: pre_best.pth
 
 model:
   model_name: *model_name
