--- a/configs/instance_segmentation/maskrcnn_cfg.yaml
+++ b/configs/instance_segmentation/maskrcnn_cfg.yaml
@@ -21,15 +21,17 @@ logs:
   iter_init: 0
   best_init: [.inf, 0]
   step: *step
-  exp_dir: "mrcnn_map_exp_130" 
-  sub_dir: "dev_1"
+  exp_dir: "mrcnn_rotnet_pt_800x500_bs1_no_awl_map_130" 
+  sub_dir: "test_1"
   last_title: last_model.pth
   best_post_title: post_best.pth
   best_pre_title: pre_best.path
 
 model:
   model_name: *model_name
+  load_model: false
   params:
+    ssl_pt: "outputs/models/Jigsaw_bs32_500by500centre_crop_with_augs/model_0/pre_best.path"
     backbone_type: pre-trained
     trainable_layers: 5
     num_classes: 2
