--- a/configs/classification/rotnet_cfg.yaml
+++ b/configs/classification/rotnet_cfg.yaml
@@ -8,7 +8,7 @@ defaults:
   seed: &seed 42
 
 loops:
-  device: "cuda:3"
+  device: "cuda:0"
   grad_acc: null
   start: 0
   end: 50
@@ -21,7 +21,7 @@ logs:
   iter_init: 0
   best_init: .inf
   step: *step
-  exp_dir: "rotnet_bs32_500by500_centrecrop_augs" 
+  exp_dir: "RotNet/bs16_run0" 
   sub_dir: "model_0"
   last_title: last_model.pth
   best_post_title: post_best.pth
@@ -34,7 +34,7 @@ model:
     backbone_type: pre-trained
     num_rotations: 4
     drop_out: 0.5
-    batch_norm: false
+    batch_norm: true
     trainable_layers: 5
 
 dataset:
@@ -49,7 +49,7 @@ dataset:
       train_val: 0.8
     num_rotations: 4
     train:
-      batch_size: 32
+      batch_size: 16
       shuffle: true
       num_workers: 0
       augmentations: true
@@ -75,6 +75,6 @@ optimiser:
     lr: 0.00005 
   sched_name: "StepLR"
   sched_params:
-    step: 5
+    step: *step
     gamma: 0.1
 
