--- a/configs/multi_task/rotmask_cfg.yaml
+++ b/configs/multi_task/rotmask_cfg.yaml
@@ -22,7 +22,7 @@ logs:
   iter_init: 0
   best_init: [.inf, 0]
   step: *step
-  exp_dir: "rotmask_800x1333_bs1_bs8_no_awl_map_130" 
+  exp_dir: "RotMask/bs16" 
   sub_dir: "model_0"
   last_title: last_model.pth
   best_post_title: post_best.pth
@@ -56,7 +56,7 @@ dataset:
     train:
       dir: train
       json: train.json
-      batch_size: [1, 8]
+      batch_size: [1, 16]
       shuffle: true
       num_workers: 0
       augmentations: true
@@ -83,7 +83,7 @@ optimiser:
   model_name: *model_name
   opt_name: "Adam"
   opt_params:
-    lr: 0.00005 
+    lr: 0.00005
   sched_name: "StepLR"
   sched_params:
     step: *step
