--- a/configs/instance_segmentation/maskrcnn_cfg.yaml
+++ b/configs/instance_segmentation/maskrcnn_cfg.yaml
@@ -8,7 +8,7 @@ defaults:
   seed: &seed 42
 
 loops:
-  device: "cuda:0"
+  device: "cuda:3"
   grad_acc: 1
   start: 0
   end: 130
@@ -21,7 +21,7 @@ logs:
   iter_init: 0
   best_init: [.inf, 0]
   step: *step
-  exp_dir: "MaskRCNN/bsfinder" 
+  exp_dir: "CUDA_TEST/" 
   sub_dir: "test_1"
   last_title: last_model.pth
   best_post_title: post_best.pth
