--- a/configs/multi_task/rotmask_cfg.yaml
+++ b/configs/multi_task/rotmask_cfg.yaml
@@ -9,7 +9,7 @@ defaults:
   seed: &seed 42
 
 loops:
-  device: "cuda:3"
+  device: "cuda:1"
   grad_acc: [1, 1]
   start: 0
   end: 130
@@ -22,7 +22,7 @@ logs:
   iter_init: 0
   best_init: [.inf, 0]
   step: *step
-  exp_dir: "CUDA_TEST" 
+  exp_dir: "RotMask/run_0" 
   sub_dir: "model_0"
   last_title: last_model.pth
   best_post_title: post_best.pth
